--- a/app/index.html
+++ b/app/index.html
@@ -14,11 +14,22 @@
     </style>
   </head>
 
-  <body ng-cloak>
+  <body ng-cloak layout="column">
 
     <md-toolbar layout="row">
       <h1 class="md-toolbar-tools" layout-align-gt-sm="center">GitHub Issue Tracker</h1>
     </md-toolbar>
+
+    <div layout="row" flex>
+      <md-sidenav layout="column" md-is-locked-open="$mdMedia('gt-sm')" class="md-sidenav-left md-whiteframe-z2">
+        <md-list>
+asdf
+        </md-list>
+      </md-sidenav>
+      <div layout="column" flex>
+        <ui-view></ui-view>
+      </div>
+    </div>
 
     <script src="./jspm_packages/system.js" type="text/javascript"></script>
     <script src="./config.js" type="text/javascript"></script>
